# reto_rust

./: Cargo.toml  dato.json  dato1.json  dato2.json
src/: main.rs
src/logica/: mod.rs  operaciones_json.rs
src/tests/: test.rs
